# agora-hackaton

./: .gitignore  docker-compose.yml
converter/: docker-compose.yml  pyproject.toml
converter/deploy/python/: Dockerfile
converter/src/api/: models.py  services.py  urls.py  views.py
converter/src/api/migrations/: 0001_initial.py  0002_rename_marketplace_id_user_queue_name.py
converter/src/api/parser/: __init__.py  parser_variations.py
converter/src/api/rabbitmq/: __init__.py  client.py  consumer.py  reciever.py
converter/src/erp_system/: celery.py  settings.py  urls.py
marketplace/: README.md  docker-compose.yml  pyproject.toml
marketplace/src/erp_receiver/: apps.py  models.py  urls.py  views.py
marketplace/src/erp_receiver/management/commands/: start_receiver.py
marketplace/src/erp_receiver/migrations/: 0001_initial.py  0002_alter_category_id_alter_measureunit_id_and_more.py  0003_product_barcode.py
marketplace/src/erp_receiver/utils/: __init__.py  db.py  rabbitmq.py
marketplace/src/market_place/: settings.py  urls.py
